# VersperMythos

./: .gitignore  pyproject.toml
model/siglip2-base-p32-256-ve/: README.md  config.json  configuration.json
src/: __init__.py
src/core/: __init__.py  ffn.py  rms_norm.py  rope.py
src/lm/: __init__.py  lora.py  model.py
src/lm/trainer/: trainer_utils.py
src/rlm/: __init__.py  model.py  tokenizer.py  variants.py
src/rlm/trainer/: trainer_utils.py
src/scripts/: convert_model.py  eval_llm.py  eval_vlm.py  serve_openai_api.py
src/tui/: __main__.py  backend_host.py  bench_runner.py  data_reader.py  discovery.py  protocol.py  train_launcher.py
src/vlm/: __init__.py  model_vlm.py
src/vlm/trainer/: trainer_utils.py
tui/: package.json  tsconfig.json
tui/src/: App.tsx  index.tsx  types.ts
tui/src/components/: SelectModal.tsx
tui/src/hooks/: useBackendSession.ts
tui/src/screens/: Benchmark.tsx  Dashboard.tsx  DataEDA.tsx  Inference.tsx  Training.tsx
